--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # --- Security ---
 # Ignore Streamlit secrets. This is the most important rule for your app.
-# It prevents your Snowflake credentials from being committed to Git.
- # Note: The secrets file should be in a .streamlit directory next to your app.
-app/.streamlit/secrets.toml
+# It prevents your Snowflake credentials from being committed to Git by ignoring
+# the .streamlit directory inside any Application Agent folder.
+.streamlit/
 
 # Ignore general credential files
 *.env
