file which should be getting ignored by Git.

--- a/A3_FHOA_Heuristics/agents/digital-asset-banking/heuristic/app/.streamlit/secrets.toml
+++ b/A3_FHOA_Heuristics/agents/digital-asset-banking/heuristic/app/.streamlit/secrets.toml
@@ -2,9 +2,9 @@
 # IMPORTANT: Add .streamlit/secrets.toml to your .gitignore file!
 
 [connections.snowflake]
-account = ""
-user = ""
-password = ""
+account = "ok, is the file being ignored successfully"
+user = "and that old entry in git just isn't getting deleted"
+password = "and this was all a great lesson in deactivating access keys"
 role = "ACCOUNTADMIN"
 warehouse = "COMPUTE_WH"
 database = "DIGITAL_ASSETS"
