--- a/A3_FHOA_Heuristics/agents/digital-asset-banking/heuristic/app/.streamlit/secrets.toml
+++ b/A3_FHOA_Heuristics/agents/digital-asset-banking/heuristic/app/.streamlit/secrets.toml
@@ -2,9 +2,9 @@
 # IMPORTANT: Add .streamlit/secrets.toml to your .gitignore file!
 
 [connections.snowflake]
-account = "not"
-user = "sure what's"
-password = "going on"
+account = "once"
+user = "more"
+password = "with feeling"
 role = "ACCOUNTADMIN"
 warehouse = "COMPUTE_WH"
 database = "DIGITAL_ASSETS"
