--- a/A3_FHOA_Heuristics/agents/fhoa/fhoa-a24-present-model-for-analysis/requirements.txt
+++ b/A3_FHOA_Heuristics/agents/fhoa/fhoa-a24-present-model-for-analysis/requirements.txt
@@ -1,5 +1,4 @@
 streamlit
 pandas
-snowflake-connector-python
-# graphviz is commented out in your script, but if you uncomment it, you'll need this package.
-# graphviz
+snowflake-snowpark-python
+graphviz
